# xmaslights

./: BUILD.bazel  BUILD.opencv  README.md  TODO  WORKSPACE  go.mod  go_repositories.bzl
cmd/automap/: BUILD.bazel  automap_main.cc  ddp.cc  ddp.h  main.cc  net.cc  net.h  net_test.cc  send_ddp.cc  stream_reader.cc  stream_reader.h
cmd/calc/: BUILD.bazel  calc.cc  calc.h  calc_main.cc  calc_test.cc  source.txt
cmd/ddp/: BUILD.bazel  README.md  commands.go  commands_test.go  ddp.go  net.go  net_test.go
cmd/detect/: BUILD.bazel  detect.cc  detect.h  detect_main.cc  detection.cc  detection.h  main.cc
cmd/gl/: BUILD.bazel  gl_main.cc
cmd/lighter/: BUILD.bazel  README.md  lighter.go
cmd/segmenter/: BUILD.bazel  main.go
cmd/segmenter/docroot/: index.html  script.js  styles.css
cmd/showfound/: BUILD.bazel  camera_images.cc  camera_images.h  click_map.cc  click_map.h  click_map_test.cc  common.h  controller.cc  controller.h  controller_view_interface.h  model.cc  model.h  model_pixel.cc  model_pixel.h  model_pixel_test.cc  model_test.cc  pixel_writer.cc  pixel_writer.h  showfound_main.cc  solver.cc  solver.h  solver_test.cc  ui.cc  ui.h  view.cc  view.h  view_command.cc  view_command.h  view_command_test.cc  view_pixel.h
git/: pre-commit
lib/base/: BUILD.bazel  base.h  binary_search.cc  binary_search.h  binary_search_test.cc  streams.h  streams_test.cc
lib/cv/: BUILD.bazel  cv.cc  cv.h  cv_test.cc
lib/file/: BUILD.bazel  coords.cc  coords.h  coords_test.cc  coords_testutil.cc  coords_testutil.h  coords_testutil_test.cc  file.cc  file.h  merged_coords.cc  merged_coords.h  path.cc  path.h  path_test.cc  pcd.cc  pcd.h  proto.cc  proto.h  readers.cc  readers.h  readers_test.cc  writers.cc  writers.h  xlights.cc  xlights.h  xlights_test.cc
lib/geometry/: BUILD.bazel  camera_metadata.cc  camera_metadata.h  points.cc  points.h  points_test.cc  points_testutil.cc  points_testutil.h  translation.h
lib/go/ddp/: BUILD.bazel  ddp.go  ddp_test.go
lib/strings/: BUILD.bazel  strutil.cc  strutil.h  strutil_test.cc
lib/testing/: BUILD.bazel  cv.h  gtest_main.cc  proto.h
proto/: BUILD.bazel  camera_metadata.proto  points.proto
scripts/: capture_left_tree  detect_all_images  marked_stats  merge_coords  run_calc  run_showfound
