load("@bazel_gazelle//:def.bzl", "gazelle")
load("@io_bazel_rules_go//go:def.bzl", "TOOLS_NOGO", "nogo")

# gazelle:prefix github.com/simmonmt/xmaslights
gazelle(
    name = "gazelle",
    command = "fix",
    extra_args = [
        "--mode=diff",
    ],
)

gazelle(
    name = "gazelle_fix",
    command = "fix",
)

# Run as:
#   bazel run :gazelle_updaterepos -- -args github.com/whatever
gazelle(
    name = "gazelle_updaterepos",
    command = "update-repos",
    extra_args = [
        "--to_macro=go_repositories.bzl%go_repositories",
    ],
)

gazelle(name = "gazelle_cmd")

nogo(
    name = "nogo",
    config = "nogo.config.json",
    visibility = ["//visibility:public"],
    deps = TOOLS_NOGO,
)

cc_library(
    name = "opencv",
    visibility = ["//visibility:public"],
    deps = select({
        "@platforms//os:macos": ["@opencv_mac"],
        "//conditions:default": ["@opencv_linux"],
    }),
)
