cc_binary(
    name = "automap",
    srcs = ["main.cc"],
    linkopts = select({
        "@platforms//os:macos": ["-undefined error"],
        "//conditions:default": [],
    }),
    deps = [
        ":stream_reader",
        "@com_google_absl//absl/flags:flag",
        "@com_google_absl//absl/flags:parse",
        "@com_google_absl//absl/log",
        "@com_google_absl//absl/log:check",
        "@com_google_absl//absl/log:initialize",
        "@com_google_absl//absl/strings",
        "@com_google_absl//absl/time",
        "@opencv",
    ],
)

cc_library(
    name = "stream_reader",
    srcs = ["stream_reader.cc"],
    hdrs = ["stream_reader.h"],
    #linkopts = select({
    #    "@platforms//os:macos": ["-undefined error"],
    #    "//conditions:default": [],
    #}),
    #linkstatic = 1,
    deps = [
        "@com_google_absl//absl/log",
        "@com_google_absl//absl/synchronization",
        "@opencv",
    ],
)
