cc_binary(
    name = "automap",
    srcs = ["main.cc"],
    linkopts = select({
        "@platforms//os:macos": ["-undefined error"],
        "//conditions:default": [],
    }),
    deps = [
        ":ddp",
        ":net",
        ":stream_reader",
        "@com_google_absl//absl/debugging:failure_signal_handler",
        "@com_google_absl//absl/flags:flag",
        "@com_google_absl//absl/flags:parse",
        "@com_google_absl//absl/log",
        "@com_google_absl//absl/log:check",
        "@com_google_absl//absl/log:initialize",
        "@com_google_absl//absl/status",
        "@com_google_absl//absl/status:statusor",
        "@com_google_absl//absl/strings",
        "@com_google_absl//absl/time",
        "@opencv",
    ],
)

cc_library(
    name = "stream_reader",
    srcs = ["stream_reader.cc"],
    hdrs = ["stream_reader.h"],
    deps = [
        "@com_google_absl//absl/log",
        "@com_google_absl//absl/synchronization",
        "@opencv",
    ],
)

cc_library(
    name = "ddp",
    srcs = ["ddp.cc"],
    hdrs = ["ddp.h"],
    deps = [
        "@com_google_absl//absl/log:check",
        "@com_google_absl//absl/status",
        "@com_google_absl//absl/status:statusor",
    ],
)

cc_library(
    name = "net",
    srcs = ["net.cc"],
    hdrs = ["net.h"],
    deps = [
        "@com_google_absl//absl/status",
    ],
)

cc_binary(
    name = "send_ddp",
    srcs = ["send_ddp.cc"],
    linkopts = select({
        "@platforms//os:macos": ["-undefined error"],
        "//conditions:default": [],
    }),
    deps = [
        ":ddp",
        ":net",
        "@com_google_absl//absl/flags:flag",
        "@com_google_absl//absl/flags:parse",
        "@com_google_absl//absl/log:check",
        "@com_google_absl//absl/status:statusor",
    ],
)
