cc_library(
    name = "calc_lib",
    srcs = ["calc.cc"],
    hdrs = ["calc.h"],
    deps = [
        "//lib/geometry",
        "//lib/geometry:camera",
        "//lib/geometry:points",
        "@com_google_absl//absl/log",
    ],
)

cc_test(
    name = "calc_test",
    srcs = ["calc_test.cc"],
    deps = [
        ":calc_lib",
        "//lib/geometry",
        "//lib/geometry:points",
        "//lib/geometry:points_testutil",
        "@com_google_absl//absl/strings",
        "@com_google_absl//absl/strings:str_format",
        "@com_google_googletest//:gtest_main",
    ],
)

cc_binary(
    name = "calc",
    srcs = ["calc_main.cc"],
    linkopts = select({
        "@platforms//os:macos": ["-undefined error"],
        "//conditions:default": [],
    }),
    deps = [
        ":calc_lib",
        "//lib/file:coords",
        "//lib/file:proto",
        "//lib/geometry",
        "//proto:points_cc_proto",
        "@com_google_absl//absl/debugging:failure_signal_handler",
        "@com_google_absl//absl/flags:flag",
        "@com_google_absl//absl/flags:parse",
        "@com_google_absl//absl/flags:usage",
        "@com_google_absl//absl/log",
        "@com_google_absl//absl/log:check",
        "@com_google_absl//absl/log:initialize",
        "@com_google_absl//absl/status:statusor",
        "@com_google_absl//absl/strings",
        "@com_google_absl//absl/strings:str_format",
    ],
)
