load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library", "go_test")

go_library(
    name = "ddp_lib",
    srcs = [
        "commands.go",
        "ddp.go",
    ],
    importpath = "github.com/simmonmt/xmaslights/cmd/ddp",
    visibility = ["//visibility:private"],
    deps = [
        "//lib/go/ddp",
        "@com_github_google_subcommands//:subcommands",
    ],
)

go_binary(
    name = "ddp",
    embed = [":ddp_lib"],
    visibility = ["//visibility:public"],
)

go_test(
    name = "ddp_test",
    srcs = ["commands_test.go"],
    embed = [":ddp_lib"],
)
