cc_binary(
    name = "detect",
    srcs = ["detect_main.cc"],
    linkopts = select({
        "@platforms//os:macos": ["-undefined error"],
        "//conditions:default": [],
    }),
    deps = [
        ":detect_lib",
        "//:opencv",
        "//lib/file",
        "@com_google_absl//absl/debugging:failure_signal_handler",
        "@com_google_absl//absl/flags:flag",
        "@com_google_absl//absl/flags:parse",
        "@com_google_absl//absl/flags:usage",
        "@com_google_absl//absl/log",
        "@com_google_absl//absl/log:check",
        "@com_google_absl//absl/status",
    ],
)

cc_library(
    name = "detect_lib",
    srcs = ["detect.cc"],
    hdrs = ["detect.h"],
    deps = [
        "//:opencv",
        "@com_google_absl//absl/log",
    ],
)
