load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "segmenter_lib",
    srcs = ["main.go"],
    importpath = "github.com/simmonmt/xmaslights/segmenter",
    visibility = ["//visibility:public"],
    deps = [
        "//lib/go/ddp",
    ],
)

go_binary(
    name = "segmenter",
    embed = [":segmenter_lib"],
    visibility = ["//visibility:public"],
)
