cc_binary(
    name = "showfound",
    srcs = ["showfound_main.cc"],
    linkopts = select({
        "@platforms//os:macos": ["-undefined error"],
        "//conditions:default": [],
    }),
    deps = [
        ":camera_images",
        ":controller",
        ":model",
        ":pixel_writer",
        ":view",
        "//:opencv",
        "//lib/file:proto",
        "//lib/file:readers",
        "//lib/geometry:camera",
        "//proto:camera_metadata_cc_proto",
        "//proto:points_cc_proto",
        "@com_google_absl//absl/debugging:failure_signal_handler",
        "@com_google_absl//absl/flags:flag",
        "@com_google_absl//absl/flags:parse",
        "@com_google_absl//absl/flags:usage",
        "@com_google_absl//absl/log",
        "@com_google_absl//absl/log:check",
        "@com_google_absl//absl/log:initialize",
        "@com_google_absl//absl/status:statusor",
        "@com_google_absl//absl/strings",
        "@com_google_absl//absl/strings:str_format",
    ],
)

cc_library(
    name = "controller",
    srcs = ["controller.cc"],
    hdrs = ["controller.h"],
    deps = [
        ":controller_view_interface",
        ":model",
        ":solver",
        ":view",
        "//lib/base",
        "//lib/strings",
        "@com_google_absl//absl/log",
        "@com_google_absl//absl/log:check",
        "@com_google_absl//absl/strings:str_format",
    ],
)

cc_library(
    name = "controller_view_interface",
    hdrs = ["controller_view_interface.h"],
)

cc_library(
    name = "view",
    srcs = ["view.cc"],
    hdrs = ["view.h"],
    deps = [
        ":click_map",
        ":controller_view_interface",
        ":view_command",
        ":view_pixel",
        "//:opencv",
        "@com_google_absl//absl/log",
        "@com_google_absl//absl/log:check",
        "@com_google_absl//absl/strings",
        "@com_google_absl//absl/strings:str_format",
    ],
)

cc_library(
    name = "view_pixel",
    hdrs = ["view_pixel.h"],
    deps = [
        "//:opencv",
        "@com_google_absl//absl/log:check",
    ],
)

cc_library(
    name = "view_command",
    srcs = ["view_command.cc"],
    hdrs = ["view_command.h"],
    deps = [
        "//:opencv",
        "//lib/base",
        "@com_google_absl//absl/log",
        "@com_google_absl//absl/log:check",
        "@com_google_absl//absl/strings",
        "@com_google_absl//absl/strings:str_format",
    ],
)

cc_test(
    name = "view_command_test",
    srcs = ["view_command_test.cc"],
    deps = [
        ":view_command",
        "//:opencv",
        "//lib/base",
        "//lib/testing:cv",
        "//lib/testing:test_main",
        "@com_google_absl//absl/log",
        "@com_google_absl//absl/strings:str_format",
        "@com_google_googletest//:gtest",
    ],
)

cc_library(
    name = "camera_images",
    srcs = ["camera_images.cc"],
    hdrs = ["camera_images.h"],
    deps = [
        "//:opencv",
        "//lib/cv",
        "//lib/file",
        "@com_google_absl//absl/status:statusor",
        "@com_google_absl//absl/strings:str_format",
    ],
)

cc_library(
    name = "model",
    srcs = ["model.cc"],
    hdrs = ["model.h"],
    deps = [
        ":camera_images",
        ":model_pixel",
        ":pixel_writer",
        "//:opencv",
        "//lib/file",
        "@com_google_absl//absl/log:check",
        "@com_google_absl//absl/status",
        "@com_google_absl//absl/status:statusor",
        "@com_google_absl//absl/types:span",
    ],
)

cc_test(
    name = "model_test",
    srcs = ["model_test.cc"],
    deps = [
        ":model",
        "//lib/testing:proto",
        "//lib/testing:test_main",
        "//proto:points_cc_proto",
        "@com_google_googletest//:gtest",
    ],
)

cc_library(
    name = "model_pixel",
    srcs = ["model_pixel.cc"],
    hdrs = ["model_pixel.h"],
    deps = [
        "//:opencv",
        "//proto:points_cc_proto",
        "@com_google_absl//absl/log:check",
    ],
)

cc_test(
    name = "model_pixel_test",
    srcs = ["model_pixel_test.cc"],
    deps = [
        ":model_pixel",
        "//lib/testing:proto",
        "//lib/testing:test_main",
        "//proto:points_cc_proto",
        "@com_google_absl//absl/strings",
        "@com_google_googletest//:gtest",
        "@com_google_protobuf//:protobuf",
    ],
)

cc_library(
    name = "solver",
    srcs = ["solver.cc"],
    hdrs = ["solver.h"],
    deps = [
        ":model",
        "//:opencv",
        "//lib/geometry",
        "//lib/geometry:camera",
        "//proto:camera_metadata_cc_proto",
        "@com_google_absl//absl/log",
        "@com_google_absl//absl/log:check",
    ],
)

cc_test(
    name = "solver_test",
    srcs = ["solver_test.cc"],
    deps = [
        ":model",
        ":solver",
        "//:opencv",
        "//lib/testing:proto",
        "//lib/testing:test_main",
        "//proto:points_cc_proto",
        "@com_google_googletest//:gtest",
    ],
)

cc_library(
    name = "click_map",
    srcs = ["click_map.cc"],
    hdrs = ["click_map.h"],
    deps = [
        "//:opencv",
        "@com_google_absl//absl/types:span",
    ],
)

cc_test(
    name = "click_map_test",
    srcs = ["click_map_test.cc"],
    deps = [
        ":click_map",
        "@com_google_googletest//:gtest_main",
    ],
)

cc_library(
    name = "pixel_writer",
    srcs = ["pixel_writer.cc"],
    hdrs = ["pixel_writer.h"],
    deps = [
        ":model_pixel",
        "//lib/base",
        "//lib/file:proto",
        "//proto:points_cc_proto",
        "@com_google_absl//absl/log",
        "@com_google_absl//absl/status",
        "@com_google_absl//absl/strings:str_format",
        "@com_google_absl//absl/types:span",
    ],
)
