cc_library(
    name = "base",
    hdrs = [
        "base.h",
        "streams.h",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "//:opencv",
    ],
)

cc_test(
    name = "streams_test",
    srcs = ["streams_test.cc"],
    deps = [
        ":base",
        "//:opencv",
        "//lib/testing:test_main",
        "@com_google_googletest//:gtest",
    ],
)
