cc_library(
    name = "base",
    hdrs = [
        "base.h",
        "streams.h",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "//:opencv",
    ],
)

cc_test(
    name = "streams_test",
    srcs = ["streams_test.cc"],
    deps = [
        ":base",
        "//:opencv",
        "//lib/testing:test_main",
        "@com_google_googletest//:gtest",
    ],
)

cc_library(
    name = "binary_search",
    srcs = ["binary_search.cc"],
    hdrs = ["binary_search.h"],
    visibility = ["//visibility:public"],
)

cc_test(
    name = "binary_search_test",
    srcs = ["binary_search_test.cc"],
    deps = [
        ":binary_search",
        "//lib/testing:test_main",
        "@com_google_googletest//:gtest",
    ],
)
