cc_library(
    name = "file",
    srcs = ["path.cc"],
    hdrs = ["path.h"],
    visibility = ["//visibility:public"],
    deps = [
        "@com_google_absl//absl/strings",
    ],
)

cc_test(
    name = "path_test",
    srcs = ["path_test.cc"],
    deps = [
        ":file",
        "@com_google_googletest//:gtest_main",
    ],
)

cc_library(
    name = "coords",
    srcs = ["coords.cc"],
    hdrs = ["coords.h"],
    visibility = ["//visibility:public"],
    deps = [
        ":readers",
        "//:opencv",
        "@com_google_absl//absl/status",
        "@com_google_absl//absl/status:statusor",
        "@com_google_absl//absl/strings",
        "@com_google_absl//absl/strings:str_format",
    ],
)

cc_test(
    name = "coords_test",
    srcs = ["coords_test.cc"],
    deps = [
        ":coords",
        ":coords_testutil",
        ":file",
        ":writers",
        "@com_google_absl//absl/log:check",
        "@com_google_googletest//:gtest_main",
    ],
)

cc_library(
    name = "coords_testutil",
    testonly = 1,
    srcs = ["coords_testutil.cc"],
    hdrs = ["coords_testutil.h"],
    deps = [
        ":coords",
        "@com_google_googletest//:gtest",
    ],
)

cc_test(
    name = "coords_testutil_test",
    srcs = ["coords_testutil_test.cc"],
    deps = [
        ":coords",
        ":coords_testutil",
        "@com_google_googletest//:gtest_main",
    ],
)

cc_library(
    name = "readers",
    srcs = ["readers.cc"],
    hdrs = ["readers.h"],
    visibility = ["//visibility:public"],
    deps = [
        "@com_google_absl//absl/status:statusor",
        "@com_google_absl//absl/strings",
    ],
)

cc_test(
    name = "readers_test",
    srcs = ["readers_test.cc"],
    deps = [
        ":file",
        ":readers",
        ":writers",
        "@com_google_absl//absl/log:check",
        "@com_google_googletest//:gtest_main",
    ],
)

cc_library(
    name = "writers",
    srcs = ["writers.cc"],
    hdrs = ["writers.h"],
    visibility = ["//visibility:public"],
    deps = [
        "@com_google_absl//absl/status:statusor",
        "@com_google_absl//absl/strings",
    ],
)

cc_library(
    name = "proto",
    srcs = ["proto.cc"],
    hdrs = ["proto.h"],
    visibility = ["//visibility:public"],
    deps = [
        "@com_google_absl//absl/cleanup",
        "@com_google_absl//absl/status",
        "@com_google_absl//absl/status:statusor",
        "@com_google_absl//absl/strings:str_format",
        "@com_google_protobuf//:protobuf",
    ],
)
