cc_library(
    name = "strings",
    srcs = ["strutil.cc"],
    hdrs = ["strutil.h"],
    visibility = ["//visibility:public"],
    deps = [
        "@com_google_absl//absl/strings",
        "@com_google_absl//absl/types:span",
    ],
)

cc_test(
    name = "strutil_test",
    srcs = ["strutil_test.cc"],
    deps = [
        ":strings",
        "//lib/base",
        "@com_google_googletest//:gtest_main",
    ],
)
