cc_library(
    name = "test_main",
    testonly = 1,
    srcs = ["gtest_main.cc"],
    visibility = ["//visibility:public"],
    deps = [
        "@com_google_absl//absl/debugging:failure_signal_handler",
        "@com_google_googletest//:gtest",
    ],
)

cc_library(
    name = "cv",
    testonly = 1,
    hdrs = ["cv.h"],
    visibility = ["//visibility:public"],
    deps = [
        "//:opencv",
        "//lib/base",
        "@com_google_absl//absl/strings",
        "@com_google_googletest//:gtest",
    ],
)

cc_library(
    name = "proto",
    testonly = 1,
    hdrs = ["proto.h"],
    visibility = ["//visibility:public"],
    deps = [
        "@com_google_absl//absl/log:check",
        "@com_google_absl//absl/strings",
        "@com_google_protobuf//:protobuf",
    ],
)
